--- a/javascript/effect/mouseEffect05.html
+++ b/javascript/effect/mouseEffect05.html
@@ -108,8 +108,8 @@
                         <img src="../assets/img/slide02.jpg" alt="이미지">
                     </figure>
                     <figcaption>
-                        <p>Look at yourself before blaming others</p>
-                        <p>남 탓 하기 전에 너 자신을 봐라.</p>
+                        <p>Do it yourself.</p>
+                        <p>너 혼자 알아서 해라.</p>
                     </figcaption>
                 </div>
             </div>
@@ -127,7 +127,6 @@
                 <li>anglePageY : <span class="anglePageY">0</span>px</li>
             </ul>
         </div>
-
     </main>
     <!-- //main -->
 
