--- a/study/t_study/Ex/study/mouseEffect03.html
+++ b/study/t_study/Ex/study/mouseEffect03.html
@@ -20,7 +20,7 @@
             <h3 class="t_tit2">HTML</h3>
             <p class="t_desc2">
                 HTML 코드는 딱히 어려운 건 없습니다.<br>
-                각 CSS로 이용할 클래스 이름 지정과 스크립트에 이용할 클래스 이름<i>(mouse__cursor)</i> 미리 지정해둡니다.<br>
+                각 CSS로 이용할 클래스 이름 지정과 스크립트에 이용할 클래스 이름<i>mouse__cursor</i> 미리 지정해둡니다.<br>
                 명언은..여러분이 평소에 가진 가치관을 기준으로...?
             </p>
             <details>
