--- a/study/t_study/Ex/study/mouseEffect05.html
+++ b/study/t_study/Ex/study/mouseEffect05.html
@@ -158,11 +158,14 @@
                 6. 두 번째는 anglePageX / Y에다가 maxPageX / Y의 <i>0.1</i>만 곱해주는 형식으로 대입하여 각도의 제한을 줍니다.<br>
                 7. 마지막으로 언제나 사용하던 gsap를 사용하여 기존 마우스 커서 스타일을 대체해줍니다.
             </p>
-            <p class="t_box"><i>123546</i></p>
+            <p class="t_box">
+                Math.max() / min()는 각각에 주어진 값에 최대 값과 최소 값을 구할 수 있습니다.
+            </p>
             <details>
                 <summary>SCRIPT CODE</summary>
             <div class="t_code">
 <pre><code class="language-js">const mouseMove = (e) => {
+    
     // 마우스 좌표값
     let mousePageX = e.pageX;
     let mousePageY = e.pageY;
