--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="assets/css/text.css">
     <link rel="stylesheet" href="assets/css/footer.css">
 
-    <!-- CSS -->
+    <!-- SWIPER -->
     <link rel="stylesheet" href="assets/css/swiper.css">
 </head>
 <body>
