--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -394,6 +394,7 @@
             },
             autoplay: {
                 delay: 2000,
+                disableOnInteraction: false,
             },
             pagination: {
                 el: '.swiper-pagination',
