--- a/javascript/effect/searchEffect04.html
+++ b/javascript/effect/searchEffect04.html
@@ -7,8 +7,8 @@
     <title>검색 이펙트 04</title>
 
     <link rel="stylesheet" href="../assets/css/search.css">
-    <link rel="stylesheet" href="../assets/css/quizSlider.css">
-    <link rel="stylesheet" href="../assets/css/quizDracula.css">
+    <link rel="stylesheet" href="../assets/css/searchSlider.css">
+    <link rel="stylesheet" href="../assets/css/searchDracula.css">
 
     <link href="https://webfontworld.github.io/tmon/Tmon.css" rel="stylesheet">
     <link href="https://webfontworld.github.io/score/SCoreDream.css" rel="stylesheet">
@@ -53,7 +53,7 @@
     </main>
     <!-- //main -->
 
-    <footer id="footer" class="dang">
+    <footer id="footer">
         <a href="mailto:ipkg7210@gmail.com" class="mail">ipkg7210@gmail.com</a>
         <div class="modal__wrap">
             <div class="modal__btn">소스 보기</div>
@@ -393,6 +393,12 @@
         </div>
     </footer>
     <!-- //footer -->
+
+    <script src="../assets/js/highlight.min.js"></script>
+    <script src="../assets/js/common.js"></script>
+    <script>
+        hljs.highlightAll();
+    </script>
 
     <script>
         const cssProperty = [
