--- a/site/site2/index.html
+++ b/site/site2/index.html
@@ -38,7 +38,7 @@
     <section id="headerType" class="skyblue">
         <div class="header__inner">
             <div class="header__logo">
-                <h1><a href="#">WEB site<em></em></a></h1>
+                <h1><a href="#">WEB <em>site</em></a></h1>
             </div>
             <div class="header__menu">
                 <ul>
