--- a/javascript/effect/searchEffect03.html
+++ b/javascript/effect/searchEffect03.html
@@ -812,6 +812,7 @@
         const searchKeyword = document.querySelectorAll(".search__info .keyword span");    // 알파벳
         const searchList = document.querySelectorAll(".search__list ul li")             // 목록 리스트
         const searchInfo = document.querySelector(".search__info .num")                 // 전체 갯수 구하기
+
         let count = 0;
 
         // 전체 갯수 구하기
@@ -820,6 +821,8 @@
         searchKeyword.forEach(el => {
             el.addEventListener("click", () => {
                 const searchWord = el.innerText;    // 사용자가 클릭한 알파벳
+
+                searchInfo.innerText = `현재 ${searchWord}가 선택한 갯수는 ${count}`
 
                 console.log(searchWord);
 
