--- a/javascript/javascript06.html
+++ b/javascript/javascript06.html
@@ -1926,31 +1926,32 @@ document.querySelector(".sample14_P3").innerHTML = result3;
         {
 
             // 01
-            const number1 = [100, 200, 300, 400, 500, 600, 700, 800, 900];
-            const num1 = number1.slice(3, 5);
-            document.write(num1)
+            // const number1 = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+            // const num1 = number1.slice(3, 5);
+            // document.write(num1)
 
-            document.write("<br>")
+            // document.write("<br>")
 
-            // 02
-            const number2 = [100, 200, 300, 400, 500, 600, 700, 800, 900];
-            const num2 = number2.slice(-6, -4);
-            document.write(num2)
+            // // 02
+            // const number2 = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+            // const num2 = number2.slice(-6, -4);
+            // document.write(num2)
 
-            document.write("<br>")
+            // document.write("<br>")
 
-            // 03
-            const number3 = [100, 200, 300, 400, 500, 600, 700, 800, 900];
-            const num3 = number3.splice(3,2);
-            document.write(num3)
+            // // 03
+            // const number3 = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+            // const num3 = number3.splice(3,2);
+            // document.write(num3)
 
-            document.write("<br>")
+            // document.write("<br>")
 
 
-            //04
-            const number4 = [100, 200, 300, 400, 500, 600, 700, 800, 900];
-            const num4 = number8.splice(-6, 2);
-            document.write(num4)
+            // //04
+            // const number4 = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+            // const num4 = number8.splice(-6, 2);
+            // document.write(num4)
+
         }
     </script>
 </body>
