--- a/test.html
+++ b/test.html
@@ -1,29 +1,19 @@
-<main id="main">
-    <section id="mouseType">
-        <div class="mouse__cursor"></div>
-        <div class="mouse__wrap">
-            <div class="mouse__img">
-                <figure>
-                    <img src="../assets/img/slide02.jpg" alt="이미지">
-                </figure>
-                <figcaption>
-                    <p>Do it yourself.</p>
-                    <p>너 혼자 알아서 해라.</p>
-                </figcaption>
-            </div>
-        </div>
-    </section>
-
-    <div class="mouse__info">
-        <ul>
-            <li>mousePageX : <span class="mousePageX">0</span>px</li>
-            <li>mousePageY : <span class="mousePageY">0</span>px</li>
-            <li>centerPageX : <span class="centerPageX">0</span>px</li>
-            <li>centerPageY : <span class="centerPageY">0</span>px</li>
-            <li>maxPageX : <span class="maxPageX">0</span>px</li>
-            <li>maxPageY : <span class="maxPageY">0</span>px</li>
-            <li>anglePageX : <span class="anglePageX">0</span>px</li>
-            <li>anglePageY : <span class="anglePageY">0</span>px</li>
-        </ul>
-    </div>
-</main>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script>
+        // 01
+        const num = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "k"];    //b d f h k (4가지)
+        
+        for(i = 0; i < num.length; i = 2) {
+            console.log(num[i])
+        }
+    </script>
+</body>
+</html>
