--- a/javascript/effect/searchEffect03.html
+++ b/javascript/effect/searchEffect03.html
@@ -39,6 +39,7 @@
             </div>
             <div class="search__info">
                 <div class="keyword">
+                    <span class="all">all</span>
                     <span>a</span>
                     <span>b</span>
                     <span>c</span>
@@ -810,8 +811,9 @@
     <script>
         // 선택자
         const searchKeyword = document.querySelectorAll(".search__info .keyword span");    // 알파벳
-        const searchList = document.querySelectorAll(".search__list ul li")             // 목록 리스트
-        const searchInfo = document.querySelector(".search__info .num")                 // 전체 갯수 구하기
+        const searchAll = document.querySelectorAll(".search__info .keyword .all");         // 알파벳
+        const searchList = document.querySelectorAll(".search__list ul li")                    // 목록 리스트
+        const searchInfo = document.querySelector(".search__info .num")                      // 전체 갯수 구하기
 
         let count = 0;
 
@@ -821,8 +823,6 @@
         searchKeyword.forEach(el => {
             el.addEventListener("click", () => {
                 const searchWord = el.innerText;    // 사용자가 클릭한 알파벳
-
-                searchInfo.innerText = `현재 ${searchWord}가 선택한 갯수는 ${count}`
 
                 console.log(searchWord);
 
@@ -839,7 +839,12 @@
                     }
                     searchInfo.textContent = count;
                 });
+
                 count = 0;
+
+                searchAll.addEventListener("click", () => {
+                    searchAll = searchInfo.length
+                })
             });
         });
     </script>
