--- a/javascript/effect/searchEffect03.html
+++ b/javascript/effect/searchEffect03.html
@@ -810,9 +810,9 @@
 
     <script>
         // 선택자
-        const searchKeyword = document.querySelectorAll(".search__info .keyword span");    // 알파벳
-        const searchAll = document.querySelectorAll(".search__info .keyword .all");         // 알파벳
-        const searchList = document.querySelectorAll(".search__list ul li")                    // 목록 리스트
+        const searchKeyword = document.querySelectorAll(".search__info .keyword span");      // 알파벳
+        const searchAll = document.querySelectorAll(".search__info .keyword .all");          // 알파벳 all
+        const searchList = document.querySelectorAll(".search__list ul li")                  // 목록 리스트
         const searchInfo = document.querySelector(".search__info .num")                      // 전체 갯수 구하기
 
         let count = 0;
@@ -823,6 +823,8 @@
         searchKeyword.forEach(el => {
             el.addEventListener("click", () => {
                 const searchWord = el.innerText;    // 사용자가 클릭한 알파벳
+
+                searchInfo.innerHTML = "전체 갯수는 " + searchList.length + "개 입니다."
 
                 console.log(searchWord);
 
@@ -839,7 +841,6 @@
                     }
                     searchInfo.textContent = count;
                 });
-
                 count = 0;
 
                 searchAll.addEventListener("click", () => {
