--- a/study/t_study/Ex/study/searchEffect04.html
+++ b/study/t_study/Ex/study/searchEffect04.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>서치 이펙트 03</title>
+    <title>서치 이펙트 04</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dracula.css">
 </head>
 <body>
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">서치 이펙트 03</h2>
+            <h2 class="t_tit">검색 이펙트 - find()</h2>
             <p class="t_desc2">
                 알파벳을 클릭하면 해당 알파벳이 앞자리에 포함된 속성이 나오도록 해보겠습니다.
             </p>
