--- a/mission.html
+++ b/mission.html
@@ -69,6 +69,14 @@
         // mission 03
         {
             const num = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "k"];    // e, f (2가지)
+
+            const result = num.find(e => e === num[4]) + num.find(e => e === num[5]);
+            document.write(result);
+
+            document.write("<br>")
+
+            const result2 = num.push()
+            document.write(result2);
         }
     </script>
 </body>
