--- a/site/textType/textType02.html
+++ b/site/textType/textType02.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>텍스트 타입 02</title>
-    
+    <title>텍스트 유형</title>
     <style>
         /* fonts */
         @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');
-
+        
         .gmark {
-            font-family: "GmarketSans";
+            font-family: 'GmarketSans';
             font-weight: 500;
         }
 
@@ -27,10 +26,22 @@
         img {
             width: 100%;
         }
-        h1, h2, h3, h4, h5, h6 {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
             font-weight: normal;
         }
-
+        .blind {
+            position: absolute;
+            clip: rect(0 0 0 0);
+            width: 1px;
+            height: 1px;
+            margin: -1px;
+            overflow: hidden;
+        }
         /* common */
         .container {
             width: 1160px;
@@ -41,193 +52,138 @@
         .section {
             padding: 120px 0;
         }
-        .section > h2 {
+        .section>h2 {
             font-size: 50px;
             line-height: 1;
             text-align: center;
-            margin-bottom: 70px;
+            margin-bottom: 20px;
         }
-        .section > h3 {
-            font-size: 16px;
-            line-height: 1;
-            text-align: center;
-            margin-bottom: 10px;
-            text-decoration: underline;
-        }
-        .section > p {
+        .section>p {
             font-size: 22px;
             font-weight: 300;
             color: #666;
             text-align: center;
             margin-bottom: 70px;
         }
-
-        /* textType02 */
-        .text__inner {
-            display: flex;
-        }
-        .main {
-            margin-right: 58px;
-        }
-        .t_desc > h3 {
-            font-size: 18px;
-            margin-bottom: 10px;
-            padding: 6px 45px 6px 45px;
-        }
-        .t_desc > h2 {
-            font-size: 50px;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-        .t_desc > p {
-            font-size: 18px;
-            color: #666;
-        }
-        .h3box {
-            width: 90px;
-            border-radius: 25px;
-            background: #000a67;
-            color: #ffffff;
+        .section>span {
+            display: block;
             text-align: center;
+            font-size: 16px;
+            text-decoration: underline;
+            margin-bottom: 16px;
         }
-        .aside {
-            width: 767px;
-            height: 428px;
+        .mb70 {
+            margin-bottom: 70px !important;
+        }
+        .skyBlue {
+            background-color: #F6F8FD;
+        }
+        /* textType */
+        .text__innner {
             display: flex;
             flex-wrap: wrap;
+            justify-content: space-between;
         }
-        .text {
-            width: 320px;
-            height: 194px;
-            margin-right: 30px;
+        .text__title {
+            width: 33%;
         }
-        .circle {
-            width: 24px;
-            height: 24px;
-            padding: 18px;
-            margin-top: 5px;
+        .text__title span {
+            background: #FF3344;
+            font-size: 14px;
+            padding: 2px 20px;
+            border-radius: 50px;
+            text-transform: uppercase;
+            font-weight: 300;
+            color: #fff;
             margin-bottom: 5px;
+            display: inline-block;
         }
-        .desc > h2 {
+        .text__title h3 {
+            font-size: 50px;
+            font-weight: bold;
+            line-height: 1.2;
             margin-bottom: 20px;
         }
-        .desc > p {
+        .text__title p {
+            font-size: 18px;
+            line-height: 1.5;
+            padding-right: 20%;
+            word-break: keep-all;
+        }
+        .text__desc {
+            width: 66%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        .text__desc>div {
+            width: 48%;
+            margin-bottom: 4%;
+        }
+        .text__desc>div h4 {
+            font-size: 24px;
+            margin-bottom: 15px;
+            position: relative;
+            padding-top: 75px;
+        }
+        .text__desc>div h4::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 60px;
+            height: 60px;
+            background: url(img/text_icon.svg);
+        }
+        .text__desc>div:nth-child(1) h4::before {
+            background-position: 0 0;
+        }
+        .text__desc>div:nth-child(2) h4::before {
+            background-position: -60px 0;
+        }
+        .text__desc>div:nth-child(3) h4::before {
+            background-position: -120px 0;
+        }
+        .text__desc>div:nth-child(4) h4::before {
+            background-position: -180px 0;
+        }
+        .text__desc>div p {
+            font-size: 18px;
+            line-height: 1.5;
             font-weight: 300;
-        }
-        .one01 {
-            width: 60px;
-            height: 60px;
-            background: #FFFADD;
-            border-radius: 50%;
-            margin-bottom: 10px;
-        }
-        .one02 {
-            width: 60px;
-            height: 60px;
-            background: #DAFFEF;
-            border-radius: 50%;
-            margin-bottom: 10px;
-        }
-        .one03 {
-            width: 60px;
-            height: 60px;
-            background: #E4F2FF;
-            border-radius: 50%;
-            margin-bottom: 10px;
-        }
-        .one04 {
-            width: 60px;
-            height: 60px;
-            background: #FFE2E2;
-            border-radius: 50%;
-            margin-bottom: 10px;
-        }
-        .one05 {
-            width: 60px;
-            height: 60px;
-            background: #E1FAFF;
-            border-radius: 50%;
-            margin-bottom: 10px;
-        }
-        .one06 {
-            width: 60px;
-            height: 60px;
-            background: #FDEFFF;
-            border-radius: 50%;
-            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
-    <section id="textType" class="text__wrap gmark section">
-        <div class="container text__inner">
-            <div class="main">
-                <div class="t_desc">
-                    <h3 class="h3box">About us</h3>
-                    <h2>Steady<br>Every Wear</h2>
-                    <p>지속적인 가치를 지닌 라이프 스타일 제품<br>을 만들기 위해 노력합니다.</p>
-                </div>
+    <section id="textType" class="text__wrap gmark section skyBlue">
+        <h2 class="blind">스크립트를 익히는 방법</h2>
+        <div class="text__innner container">
+            <div class="text__title">
+                <span>frontend</span>
+                <h3>프론트앤드<br>전문과정</h3>
+                <p>
+                    프론트앤드 개발자로 취업하기 위한
+                    전문 과정입니다.
+                    여러분들도 도전해보세요!
+                </p>
             </div>
-            <div class="aside">
-                <article class="text">
-                    <div class="one01">
-                        <figure class="circle">
-                            <img src="img/Dribbble.svg" alt="Dribbble">
-                        </figure>
-                    </div>
-                    <div class="desc">
-                        <h2>Brand</h2>
-                        <p>
-                            디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
-                            브랜드의 플랫폼을 통해 영감을 줍니다.
-                        </p>
-                    </div>
-                </article>
-
-                <article class="text">
-                    <div class="one02">
-                        <figure class="circle">
-                            <img src="img/Twiiter.svg" alt="Twiiter">
-                        </figure>
-                    </div>
-                    <div class="desc">
-                        <h2>Tpo</h2>
-                        <p>
-                            디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
-                            브랜드의 플랫폼을 통해 영감을 줍니다.
-                        </p>
-                    </div>
-                </article>
-
-                <article class="text">
-                    <div class="one03">
-                        <figure class="circle">
-                            <img src="img/Instagram.svg" alt="Instagram">
-                        </figure>
-                    </div>
-                    <div class="desc">
-                        <h2>원단</h2>
-                        <p>
-                            디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
-                            브랜드의 플랫폼을 통해 영감을 줍니다.
-                        </p>
-                    </div>
-                </article>
-
-                <article class="text">
-                    <div class="one04">
-                        <figure class="circle">
-                            <img src="img/YouTube.svg" alt="YouTube">
-                        </figure>
-                    </div>
-                    <div class="desc">
-                        <h2>ADVOCACY</h2>
-                        <p>
-                            디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
-                            브랜드의 플랫폼을 통해 영감을 줍니다.
-                        </p>
-                    </div>
-                </article>
+            <div class="text__desc">
+                <div>
+                    <h4>웹 디자인</h4>
+                    <p>웹디자이너가 포함된 웹 및 멀티미디어 디자이너는 다른 직업과 비교하여 임금과 복리후생이 낮은 퍼블리싱은 웹 사이트를 제작할 것입니다.</p>
+                </div>
+                <div>
+                    <h4>웹 퍼블리셔</h4>
+                    <p>웹디자이너가 포함된 웹 및 멀티미디어 디자이너는 다른 직업과 비교하여 임금과 복리후생이 낮은 퍼블리싱은 웹 사이트를 제작할 것입니다.</p>
+                </div>
+                <div>
+                    <h4>프론트앤드 개발자</h4>
+                    <p>웹디자이너가 포함된 웹 및 멀티미디어 디자이너는 다른 직업과 비교하여 임금과 복리후생이 낮은 퍼블리싱은 웹 사이트를 제작할 것입니다.</p>
+                </div>
+                <div>
+                    <h4>백앤드 개발자</h4>
+                    <p>웹디자이너가 포함된 웹 및 멀티미디어 디자이너는 다른 직업과 비교하여 임금과 복리후생이 낮은 퍼블리싱은 웹 사이트를 제작할 것입니다.</p>
+                </div>
             </div>
         </div>
     </section>
