--- a/site/textType/textType03.html
+++ b/site/textType/textType03.html
@@ -98,19 +98,20 @@
         .text__desc {
             font-size: 18px;
             line-height: 1.5;
-            border-bottom: 1px solid #d9d9d9;
+            border-bottom: 1px solid #f4f4f4;
             font-weight: 300;
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
             -webkit-line-clamp: 7;
             -webkit-box-orient: vertical;
-            min-height: 210px;
+            min-height: 189px;
+            padding-bottom: 25px;
         }
         .text__info {
             padding: 25px 0 25px 63px;
             border-bottom: 1px solid #d9d9d9;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         .text__info h3 {
             font-size: 26px;
