--- a/javascript/effect/mouseEffect06.html
+++ b/javascript/effect/mouseEffect06.html
@@ -100,12 +100,12 @@
                         <div class="line">
                             <div class="left">
                                 <div class="spanWrap">
-                                    <span class="spanSlow">pain past</span>
+                                    <span class="spanSlow">one two</span>
                                 </div>
                             </div>
                             <div class="right">
                                 <div class="spanWrap">
-                                    <span class="spanSlow">pain past</span>
+                                    <span class="spanSlow">one two</span>
                                 </div>
                             </div>
                         </div>
@@ -113,12 +113,12 @@
                         <div class="line">
                             <div class="left">
                                 <div class="spanWrap">
-                                    <span class="spanFast">123456789</span>
+                                    <span class="spanFast">three four</span>
                                 </div>
                             </div>
                             <div class="right">
                                 <div class="spanWrap">
-                                    <span class="spanFast">12356</span>
+                                    <span class="spanFast">three four</span>
                                 </div>
                             </div>
                         </div>
@@ -126,12 +126,12 @@
                         <div class="line">
                             <div class="left">
                                 <div class="spanWrap">
-                                    <span class="spanSlow">지니간 고통은</span>
+                                    <span class="spanSlow">five six</span>
                                 </div>
                             </div>
                             <div class="right">
                                 <div class="spanWrap">
-                                    <span class="spanSlow">지니간 고통은</span>
+                                    <span class="spanSlow">five six</span>
                                 </div>
                             </div>
                         </div>
@@ -139,12 +139,12 @@
                         <div class="line">
                             <div class="left">
                                 <div class="spanWrap">
-                                    <span class="spanFast">쾌락이다.</span>
+                                    <span class="spanFast">seven eight</span>
                                 </div>
                             </div>
                             <div class="right">
                                 <div class="spanWrap">
-                                    <span class="spanFast">쾌락이다.</span>
+                                    <span class="spanFast">seven eight</span>
                                 </div>
                             </div>
                         </div>
