--- a/study/t_study/Ex/study/mouseEffect05.html
+++ b/study/t_study/Ex/study/mouseEffect05.html
@@ -216,7 +216,7 @@ window.addEventListener("mousemove", mouseMove);
 
             <br><br>
 
-            <h3 class="t_tit2">결과물</h3>
+            <h3 class="t_tit2">RESULT</h3>
             <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
                 <iframe src="https://kdb6.github.io/ck/javascript/effect/mouseEffect05.html" frameborder="0"></iframe>
             </div>
